### Added


### Changed
- Added the parsing rules from the Prophets to the protein description.

### Fixed
